cabal-version:      3.0
name:               dhscanner-ast
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             OrenGitHub
maintainer:         Oren Ish Shalom
build-type:         Simple

common warnings
    ghc-options: -Wall

library

    import:
        warnings

    exposed-modules:
        Ast,
        Token,
        Location

    build-depends:
        base,
        containers,
        aeson

    hs-source-dirs:
        src

    default-language:
        Haskell2010

test-suite dhscanner-ast-test

    import:
        warnings

    type:
        exitcode-stdio-1.0

    hs-source-dirs:
        test

    main-is:
        Main.hs

    build-depends:
        base,
        dhscanner-ast,
        QuickCheck,
        random

    default-language:
        Haskell2010
